syntax = "proto3";

package task;

option go_package = "entities/task;task";

message CreateTaskParams {
  int64 machine_id = 1;
  int64 shift_id = 2;
  string frequency = 3;
  string task_priority = 4;
  string description = 5;
  int64 created_by = 6;
}

message TaskResponse {
  CreateTaskParams data = 1;
}

service TaskService {
  rpc Create(CreateTaskParams) returns (TaskResponse);
}